--- a/SmolTAS.csproj
+++ b/SmolTAS.csproj
@@ -48,6 +48,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\Games\Smol Ame\SmolAme_v210612.1 SALT\Smol Ame_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.ugui, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\Games\Smol Ame\SmolAme_v210612.1 SALT\Smol Ame_Data\Managed\Unity.ugui.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>D:\Games\Smol Ame\SmolAme_v210612.1 SALT\Smol Ame_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
