--- a/SmolTAS.csproj
+++ b/SmolTAS.csproj
@@ -70,8 +70,10 @@
     <Compile Include="OnScreenText.cs" />
     <Compile Include="PauseAndResume.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterInputFromFile.cs" />
     <Compile Include="SaveAndLoadPos.cs" />
     <Compile Include="SlowMo.cs" />
+    <Compile Include="VirtualInputs.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="modinfo.json" />
